# os_kernel_lab

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README  README-chinese.md  README-english.md  README.md  SUMMARY.md  book.json  deploy.sh  dev-env-info.md  getpatch.sh  index.html  opensource_os_list.md  package-lock.json  params.json  pushall.sh  resources.md  riscv64-gcc-help.txt  rust-toolchain  rust-toolchain.toml  setenv.sh
_layouts/: default.html  post.html
ch1/: search-index.js  settings.html  source-files.js
ch2/: crates.js  search-index.js  source-files.js
ch3-coop/: search-index.js  source-files.js
ch5/: search-index.js  source-files.js
ch7/: search-index.js  source-files.js
ch8/: search-index.js  source-files.js
code/: autobuild.sh  autotest.sh
docs/: README.md  _coverpage.md  _sidebar.md  format.md  index.html  lab0.md  lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab8.md  quickstart.md  riscv-overview.md  toolchain-overview.md  ucore_rv64_porting.md
easy-fs/: Cargo.toml  build.rs
easy-fs-fuse/: Cargo.toml
easy-fs-fuse/src/: main.rs
easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  dirty.rs  efs.rs  layout.rs  lib.rs  vfs.rs
homework/: hw2.txt  hw3.txt
labcodes/: autotest.sh  clangbuildall.sh  cleanall.sh  formatter.py  gccbuildall.sh
labcodes_answer/: .gitignore  README.txt  cleanall.sh  gccbuildall.sh
labreport/: lab1.md
main/: search-index.js  source-files.js
mytest/: ch1.txt
notes/: 关于课程设计.md  方案设计文档.md  结题答辩（13周）.key  设计预期和目标.md
opensbi/: README.md  fw_jump.elf
os/: .gdb_history  Cargo.toml  Makefile  analyze.txt  build.rs  build.txt  debug.sh  fs.img  make_hdd.sh  run-fdt.sh  run-nodisp.sh  run.sh  run.txt  rust-toolchain
os/.cargo/: config
os/src/: batch.rs  config.rs  console.rs  consts.rs  entry.asm  lang_items.rs  linker-k210.ld  linker-qemu.ld  linker.ld  loader.rs  main.rs  panic.rs  sbi.rs  switch.S  timer.rs  trap.S
os/src/algorithm/: Cargo.toml
os/src/algorithm/src/: lib.rs  unsafe_wrapper.rs
os/src/algorithm/src/allocator/: mod.rs  segment_tree_allocator.rs
os/src/algorithm/src/scheduler/: fifo_scheduler.rs  hrrn_scheduler.rs  mod.rs
os/src/asm/: entry.asm  interrupt.asm  switch.asm
os/src/boards/: k210.rs  qemu.rs
os/src/data_structure/: linked_list_allocator.rs  mod.rs  segment_tree.rs  segment_tree_allocator.rs  stacked_allocator.rs  unsafe_wrapper.rs
os/src/drivers/: device_tree.rs  driver.rs  mod.rs  plic.rs  virtio.rs  virtio_blk.rs
os/src/drivers/block/: mod.rs  sdcard.rs  virtio_blk.rs
os/src/drivers/bus/: mod.rs  virtio.rs  virtio_mmio.rs
os/src/drivers/chardev/: mod.rs  ns16550a.rs
os/src/drivers/gpu/: mod.rs
os/src/drivers/input/: mod.rs
os/src/file_system/: mod.rs  swap_file.rs
os/src/fs/: config.rs  inode.rs  inode_ext.rs  mod.rs  pipe.rs  stdin.rs  stdio.rs  stdout.rs
os/src/gui/: button.rs  graphic.rs  icon.rs  image.rs  mod.rs  paint.rs  panel.rs  terminal.rs
os/src/interrupt/: context.rs  handler.rs  mod.rs  timer.rs  trap_frame.rs
os/src/kernel/: condvar.rs  fs.rs  mod.rs  process.rs  syscall.rs
os/src/linker/: linker.ld
os/src/memory/: address.rs  config.rs  dynamic.rs  frame_allocator.rs  heap.rs  mod.rs  paging.rs  range.rs
os/src/memory/frame/: allocator.rs  frame.rs  frame_tracker.rs  mod.rs  swapper.rs
os/src/memory/mapping/: mapping.rs  memory_set.rs  mod.rs  page_range.rs  page_table.rs  page_table_entry.rs  range.rs  segment.rs  swapper.rs
os/src/memory/memory_set/: area.rs  attr.rs  handler.rs  mod.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/process/: config.rs  context.rs  kernel_stack.rs  mod.rs  process.rs  processor.rs  scheduler.rs  stack.rs  thread.rs
os/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs  up.rs
os/src/syscall/: fs.rs  gui.rs  input.rs  mod.rs  process.rs  sync.rs  thread.rs
os/src/task/: action.rs  context.rs  id.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  signal.rs  sigret.S  sigret.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
riscv-pk/: .gitignore  LICENSE  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
riscv-pk/bbl/: bbl.ac  bbl.h  bbl.lds  bbl.mk.in  logo.c  payload.S
riscv-pk/dummy_payload/: dummy_entry.S  dummy_payload.mk.in
riscv-pk/machine/: atomic.h  emulation.c  fdt.c  finisher.c  flush_icache.c  fp_asm.S  fp_emulation.c  fp_emulation.h  fp_ldst.c  htif.h  machine.ac  machine.mk.in  minit.c  misaligned_ldst.c  mtrap.c  muldiv_emulation.c  uart.c  uart16550.c  uart16550.h  unprivileged_memory.h  vm.h
riscv-pk/pk/: boot.h  console.c  elf.c  elf.h  entry.S  file.c  file.h  frontend.c  frontend.h  handlers.c  mmap.c  mmap.h  pk.ac  pk.c  pk.h  pk.lds  pk.mk.in  syscall.c  syscall.h
riscv-pk/scripts/: config.sub  mk-install-dirs.sh  vcs-version.sh
riscv-pk/softfloat/: f32_add.c  f32_classify.c  f32_div.c  f32_eq.c  f32_eq_signaling.c  f32_isSignalingNaN.c  f32_le.c  f32_le_quiet.c  f32_lt.c  f32_lt_quiet.c  f32_mul.c  f32_mulAdd.c  f32_rem.c  f32_roundToInt.c  f32_sqrt.c  f32_sub.c  f32_to_f64.c  f32_to_i32.c  f32_to_i32_r_minMag.c  f32_to_i64.c  f32_to_i64_r_minMag.c  f32_to_ui32.c  f32_to_ui32_r_minMag.c  f32_to_ui64.c  f32_to_ui64_r_minMag.c  f64_add.c  f64_classify.c  f64_div.c  f64_eq.c  f64_eq_signaling.c  f64_isSignalingNaN.c  f64_le.c  f64_le_quiet.c  f64_lt.c  f64_lt_quiet.c  f64_mul.c  f64_mulAdd.c  f64_rem.c  f64_roundToInt.c  f64_sqrt.c  (+75 more)
riscv-pk/softfloat/8086/: OLD-specialize.c  OLD-specialize.h  platform.h  s_commonNaNToF32UI.c  s_commonNaNToF64UI.c  s_f32UIToCommonNaN.c  s_f64UIToCommonNaN.c  s_isSigNaNF32UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c  softfloat_raiseFlags.c  softfloat_types.h  specialize.h
riscv-pk/util/: util.mk.in
user/: Cargo.toml  Makefile  build.py
user/.cargo/: config
user/src/: config.rs  console.rs  file.rs  io.rs  lang_items.rs  lib.rs  linker.ld  sync.rs  syscall.rs  task.rs
user/src/linker/: linker.ld
(+2145 files in other folders)
