[package]
name = "os"
version = "0.1.0"
authors = ["Yu Chen <yuchen@mail.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
#easy-fs = { path = "../easy-fs" }